tests/baselines/reference/parserStrictMode11.errors.txt
==== tests/cases/compiler/parserStrictMode11.ts (1 errors) ====
    "use strict";
    var v = function f(eval) {
                       ~~~~
!!! parserStrictMode11.ts(2,20): error TS1100: Invalid use of 'eval' in strict mode.
    };